force-app/main/default/objects/Registration_Education__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated via process builder</description>
    <label>Applicant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Registration Education</relationshipLabel>
    <relationshipName>Registration_Education</relationshipName>
    <type>Lookup</type>
</CustomField>