force-app/main/default/objects/Registration_Education__c/fields/Attendee__c.field-meta.xml
<CustomField>
    <fullName>Attendee__c</fullName>
    <inlineHelpText>Who will be taking this course or exam?</inlineHelpText>
    <label>Attendee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>