force-app/main/default/objects/Registration_Education__c/fields/Conga_Link__c.field-meta.xml
<CustomField>
    <fullName>Conga_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://composer.congamerge.com/?SessionId=&quot; + $Api.Session_ID +
&quot;&amp;ServerURL=&quot; +  $Api.Partner_Server_URL_290 +
 Send_Exam_Authorization__c ,
&quot;Test Conga Workflow via UI&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Link</label>
    <type>Text</type>
</CustomField>