force-app/main/default/objects/Registration_Education__c/fields/Exam_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Exam_Expiration_Date__c</fullName>
    <formula>Exam_Date__c + 730</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exam Expiration Date</label>
    <type>Date</type>
</CustomField>