force-app/main/default/objects/Registration_Education__c/fields/Exam_or_Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Exam_or_Course_Name__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exam or Course Name</label>
    <type>Text</type>
</CustomField>