force-app/main/default/objects/Registration_Education__c/fields/IsExamExpired__c.field-meta.xml
<CustomField>
    <fullName>IsExamExpired__c</fullName>
    <formula>IF(Exam_Date__c + 730 &gt; TODAY(), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsExamExpired</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>