force-app/main/default/objects/Registration_Education__c/fields/Registration_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Registration_Record_Type__c</fullName>
    <formula>Registration__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Record Type</label>
    <type>Text</type>
</CustomField>