force-app/main/default/objects/Registration_Education__c/fields/Send_Exam_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Send_Exam_Authorization__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=a0nt000000028Pa&quot; +
&quot;&amp;EmailAdditionalTo=&quot; + Registration__r.Applicant__r.Email +
&quot;&amp;EmailRelatedToId=&quot; +  Registration__r.Id  +
&quot;&amp;EmailFromID=0D2t0000000Gmid&quot; +
&quot;&amp;congaemailtemplateid=a0lt0000000EWPF&quot; +
&quot;&amp;defaultpdf=1&quot; +
&quot;&amp;qmode=SendEmail&quot;</formula>
    <label>Send Exam Authorization</label>
    <type>Text</type>
</CustomField>