force-app/main/default/objects/Registration_Education__c/fields/Send_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by registration flow when the registration status changes to submitted. Setting this to true triggers the outbound email workflow to send the conga template to the applicant.</description>
    <label>Send Notification</label>
    <type>Checkbox</type>
</CustomField>